Avalara Fullqa/src/Distribution Engine/objects/Member_distributor_detail__c.object
<CustomObject>
    <description>Team member distributor details</description>
    <fields>
        <fullName>Actual_distribution_sequence__c</fullName>
        <label>Actual distribution sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_control_count__c</fullName>
        <label>Distribution control count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_sequence__c</fullName>
        <label>Distribution sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_team_member__c</fullName>
        <label>Distribution team member</label>
        <referenceTo>Team_member__c</referenceTo>
        <relationshipLabel>Member distributor details</relationshipLabel>
        <relationshipName>Member_distributor_details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <referenceTo>Distributor__c</referenceTo>
        <relationshipLabel>Member distributor details</relationshipLabel>
        <relationshipName>Member_distributor_details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Distributor_name__c</fullName>
        <formula>Distributor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_assignment_date__c</fullName>
        <label>Last assignment date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_count_reset_date__c</fullName>
        <label>Last count reset date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Load_balanced_count__c</fullName>
        <label>Load balanced count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rejections_ih__c</fullName>
        <label>Rejections ih</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <formula>Distribution_team_member__r.User__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighting_ih__c</fullName>
        <label>Weighting ih</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Member distributor detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member distributor details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>